[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/superstar_memesbruh03_16px.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/RoomsScene.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="RoomsScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -277.0
margin_top = 24.0
margin_right = -173.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Room ID"

[node name="ItemList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = -225.0
margin_right = 284.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 4 )
max_columns = 2
same_column_width = true
fixed_column_width = 270

[node name="match" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -283.0
margin_top = -95.0
margin_right = 15.0
margin_bottom = -33.0
rect_pivot_offset = Vector2( -361, -301 )
custom_fonts/font = SubResource( 3 )
disabled = true
text = "START MATCH"

[node name="exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 85.0
margin_top = -93.0
margin_right = 283.0
margin_bottom = -31.0
rect_pivot_offset = Vector2( -361, -301 )
custom_fonts/font = SubResource( 3 )
text = "EXIT"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="match" to="." method="_on_match_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
